# otus-data-structures-algorithms

./: CMakeLists.txt  README.md
dz10/: tree.cpp
dz12/: hash_table.cpp
dz13/: trie.cpp
dz14/: kosarayu.cpp
dz15/: demukron.cpp
dz16/: kraskal.cpp
dz17/: dijkstra.cpp
dz18/: substring_search.cpp
dz2/: dz2.cpp
dz20/: rle.cpp
dz21/: 5x8.cpp  digital_tree.cpp  islands.cpp  one_two_pears.cpp
dz3/: fibonacci.cpp  power.cpp  prime.cpp
dz4/: factor_array.hpp  i_array.hpp  main.cpp  matrix_array.hpp  priority_queue.hpp  single_array.hpp  space_array.hpp  std_vector_wrapper.hpp  vector_array.hpp
dz5/: chess.cpp
dz6/: sort.cpp
dz7/: sort.cpp
dz8/: sort.cpp
dz9/: sort.cpp
sort/: sort_base.hpp
tester/: tester.cpp  tester.hpp
